# RAG_Screening

./: .dockerignore  .gitignore  Dockerfile  README.md  diagrams.md  docker-compose.yml  pyproject.toml
backend/: main.py
backend/api/: routes.py
backend/api/endpoints/: candidates.py  screening.py  system.py
backend/core/: config.py  database.py  services.py
backend/models/: database.py  sql.py
backend/schemas/: request.py  response.py
backend/services/: data.py  embedding.py  llm.py  parser.py  reranker.py  workflow.py
frontend/: app.py
frontend-react/: package-lock.json  package.json  tailwind.config.js
frontend-react/src/: App.jsx  main.jsx
frontend-react/src/components/: Button.jsx  Card.jsx  Input.jsx  Layout.jsx
frontend-react/src/context/: ThemeContext.jsx
frontend-react/src/pages/: CandidateDetailPage.jsx  Candidates.jsx  Comparison.jsx  Dashboard.jsx  History.jsx  Upload.jsx
frontend-react/src/services/: api.js
scripts/: check_db_counts.py  download_model.py  generate_subtle_resume.py  generate_test_resumes.py  simple_test.py  test_agentic_flow.py  test_api.py  test_api_to_file.py  test_improved_features.py  view_chromadb.py
tests/: conftest.py  test_api.py  test_embedding.py  test_services.py
